# mw-vcpkg-registry

./: .gitignore  README.md  bump-port-version.py  get_sha512.py  update-ports.py
.github/workflows/: ci.yml  test-ports.yml
ports/calculator/: portfile.cmake  usage  vcpkg.json
ports/cppsdl2/: portfile.cmake  usage  vcpkg.json
ports/cppsdl3/: portfile.cmake  usage  vcpkg.json
ports/signal/: portfile.cmake  usage  vcpkg.json
test/: CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg-configuration.json  vcpkg.json
util/: registry.py  util.py
versions/: baseline.json
versions/c-/: calculator.json  cppsdl2.json  cppsdl3.json
versions/s-/: signal.json
